--- a/index.html
+++ b/index.html
@@ -151,33 +151,19 @@
                             <p class="text-no-credit-card">*No credit card required</p>
                         </div>
 
-                        <div class="patients-container1">
-
-
-                          <div class="card__bullets">
-                            <div class="box">
-                              <div class="box-element-patients">
-                                <div class="box-overlap">
-                                  <div class="box-avatars">
-                                    <div class="box-overlap-group-wrapper">
-                                      <div class="box-overlap-group">
-                                        <div class="box-avatar-image"></div>
-                                        <div class="box-div"></div>
-                                        <div class="box-avatar-image-2"></div>
-                                        <div class="box-avatar-image-3"></div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="box-overlap-2">
-                                    <div class="box-text-wrapper">3K+</div>
-                                    <div class="box-text-wrapper-2">Patients</div>
-                                  </div>
-                                  <div class="box-button"><img id="box-vector" src="https://c.animaapp.com/O1yJMPG5/img/vector.svg" /></div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
+                        <div class="box-overlap">
+                          <div class="box-button"><img id="box-vector" src="https://c.animaapp.com/O1yJMPG5/img/vector.svg" /></div>
                         </div>
+                        <div class="box-avatars">
+                          <img src="./media/icons/content-home/avatars.png">
+                        </div>
+
+                        <div class="box-overlap-2">
+                          <div class="box-text-wrapper">3K+</div>
+                          <div class="box-text-wrapper-2">Patients</div>
+                        </div>
+
+                        
                       </div>
                     </div>
                   </div>
