--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                       </div>
 
                       <div class="img-text1-content1-container2">
-                        <img src="./media/icons/content-home/L2 1.png">
+                        <img src="https://c.animaapp.com/MGZdvz9O/img/mask-group.png">
                       </div>
                     </div>
 
