--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
                     </a>
                   </span>
 
-                  <svg xmlns="http://www.w3.org/2000/svg" width="187" height="115" viewBox="0 0 187 115" fill="none">
-                    <path d="M171.93 115H15C6.71573 115 0 108.284 0 100V22.6667C0 14.3824 6.71573 7.66667 15 7.66667H82L94 0L105.5 8.09259H171.57C179.827 8.09259 186.531 14.7656 186.57 23.0224L186.93 99.9298C186.968 108.241 180.241 115 171.93 115Z" fill="white"/>
-                    </svg>
+                  <img src="./media/icons/content-home/Vector 18.png">
                 </div>
               </span>
 
