--- a/services.html
+++ b/services.html
@@ -311,7 +311,7 @@
                         </div>
                         <div class="services-div-4">
                             <img class="services-pattern-icon" src="https://c.animaapp.com/gIt7HmzZ/img/pattern-icon-12.svg" />
-                            <p class="services-exclusive-one-on-one-2"><br />Exclusive One-on-one Session with orthodontic expert</p>
+                            <p class="services-exclusive-one-on-one-2">Exclusive One-on-one Session with orthodontic expert</p>
                         </div>
                         </div>
                     </div>
