--- a/services.html
+++ b/services.html
@@ -380,9 +380,13 @@
                         <div class="services-text-wrapper-25">Find the Perfect Fit</div>
                         <p class="services-text-wrapper-26">Explore Our treatment Planning Pricing Options</p>
                     </div>
-                    <button class="services-button">
+                    <button onclick="closePlanComparation()" class="services-button">
                         <img class="services-img-2" src="https://c.animaapp.com/gIt7HmzZ/img/less.svg" />
-                        <div class="services-get-started-today-2">Close Plan Comparison</div>
+                        <svg class="services-svg-2" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 5V19" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M5 12H19" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <div class="services-get-started-today-2"><span class="close-text-services">Close</span><span class="view-text-services">View</span>&nbsp;Plan Comparison</div>
                     </button>
                     </div>
                 </div>
