--- a/our-blog.html
+++ b/our-blog.html
@@ -168,17 +168,7 @@
                         </div>
                         </div>
                     </div>
-                    <div class="our-blog-cta">
-                        <div class="our-blog-overlap-group">
-                        <div class="our-blog-radial-gradient-bg"></div>
-                        <img
-                            class="our-blog-fondo-bokeh-azul"
-                            src="https://c.animaapp.com/soeIAcJW/img/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto.png"
-                        />
-                        <div class="our-blog-ellipse"></div>
-                        <p class="our-blog-our-blog"><span class="our-blog-span">Our </span> <span class="our-blog-text-wrapper-3">blog</span></p>
-                        </div>
-                    </div>
+                    <div class="our-blog-cta"></div>
                     <div class="our-blog-frame">
                         <div class="our-blog-tab"><div class="our-blog-text-wrapper-4">All Blogs</div></div>
                         <div class="our-blog-tab-2"><div class="our-blog-text-wrapper-5">Category One</div></div>
