--- a/case-studies.html
+++ b/case-studies.html
@@ -153,13 +153,15 @@
                 </p>
                 <div class="case-studies-frame">
                     <img class="case-studies-DSC" src="./media/icons/content-home/DSC_3163-2 1.png" />
+                    <img class="case-studies-img" src="./media/icons/content-home/DSC_3147 2.png" />
                     <div class="case-studies-time">
                         <div class="case-studies-text-wrapper-2">Treatment Plan</div>
-                        <p class="case-studies-p">Lorem ipsum dolor sit amet consectetur. Mattis luctus est tortor
+                        <p class="case-studies-p">Lorem ipsum dolor sit amet consectetur. Mattis<br /> luctus est tortor
                             habitant vitae non
                             auctor.</p>
                     </div>
-                    <img class="case-studies-img" src="./media/icons/content-home/DSC_3147 2.png" />
+                    <img class="before-text" src="./media/icons/content-home/Before.png">
+                    <img class="scroll-text" src="./media/icons/content-home/scroll.png">
                 </div>
                 
                 <div class="case-studies-bar-case-studies">
