--- a/case-studies.html
+++ b/case-studies.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body>
+<body id="body-background">
 
     <div id="smooth-wrapper">
         <div id="smooth-wrapper">
