--- a/case-studies.html
+++ b/case-studies.html
@@ -154,6 +154,8 @@
                     </p>
                     <div class="case-studies-frame">
                         <div class="case-studies-DSC"></div>
+                        <div class="case-studies-DSC-2"></div>
+                        <div class="case-studies-DSC-4"></div>
                         <img class="case-studies-img" src="./media/icons/content-home/DSC_3147 2.png" />
                         <div class="case-studies-time">
                             <div class="case-studies-text-wrapper-2">Treatment Plan</div>
@@ -161,6 +163,7 @@
                                 habitant vitae non
                                 auctor.</p>
                         </div>
+                        <img class="procedural-video" src="./media/icons/content-home/Procedural Video.png">
                         <img class="before-text" src="./media/icons/content-home/Before.png">
                         <img class="scroll-text" src="./media/icons/content-home/scroll.png">
                     </div>
