--- a/case-studies.html
+++ b/case-studies.html
@@ -157,6 +157,8 @@
                         <div class="case-studies-DSC-2"></div>
                         <div class="case-studies-DSC-4"></div>
                         <div class="case-studies-DSC-5"></div>
+                        <div class="case-studies-DSC-6"></div>
+                        <div class="case-studies-DSC-7"></div>
                         <img class="case-studies-img" src="./media/icons/content-home/DSC_3147 2.png" />
                         <div class="case-studies-time">
                             <div class="case-studies-text-wrapper-2">Treatment Plan</div>
@@ -196,7 +198,10 @@
                             <div class="case-studies-bar-img"></div>
                         </div>
                         <div class="case-studies-bar-line-2"></div>
-                        <div class="case-studies-bar-element-2"></div>
+                        <div class="case-studies-bar-img-2"></div>
+                        <div class="case-studies-bar-element-2">
+                            <div class="case-studies-bar-text-wrapper-8">2</div>
+                        </div>
                         <div class="case-studies-bar-element-3"></div>
                     </div>
                 </div>
