--- a/case-studies.html
+++ b/case-studies.html
@@ -159,6 +159,10 @@
                         <div class="case-studies-DSC-5"></div>
                         <div class="case-studies-DSC-6"></div>
                         <div class="case-studies-DSC-7"></div>
+                        <div class="case-studies-DSC-8"></div>
+                        <div class="case-studies-DSC-9"></div>
+                        <div class="case-studies-DSC-10"></div>
+                        <div class="case-studies-DSC-11"></div>
                         <img class="case-studies-img" src="./media/icons/content-home/DSC_3147 2.png" />
                         <div class="case-studies-time">
                             <div class="case-studies-text-wrapper-2">Treatment Plan</div>
