--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
                     <div class="content1-container1-content">
                       <div class="title-content1-container">
-                        <h2><span>The easy way</span> to do<br>
-                          clear aligner planning.</h2>
+                        <h2><span>The easy way</span> to<br class="br-mobile"> do<br class="br-desktop">
+                          clear aligner<br class="br-mobile"> planning.</h2>
                       </div>
 
                       <div class="card1-container1">
