--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@
                     </svg>
                     
                 </div>
+
+                <img class="content3-logo-plans-mquery" src="./media/icons/content-home/banner.png">
               </div>
 
               <div class="content4-container1">
