--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
               </div>
 
               <div class="content4-container1">
-                <h2 class="title-content4-container1"><span>Because getting predictable results</span><br> shouldn’t be so complicated
+                <h2 class="title-content4-container1"><span>Because getting predictable results</span>shouldn’t be so complicated
                 </h2>
 
                 <div class="img-text-content4-container1">
@@ -459,7 +459,7 @@
                         </svg>
   
                         <p>
-                          Worrying if your plan will actually<br> work — or lead to more issues for<br> your patient later
+                          Worrying if your plan will actually<br class="br-desktop"> work — <br class="br-mobile">or lead to more issues for<br class="br-desktop"> your patient later
                         </p>
                       </div>
                       
@@ -477,7 +477,7 @@
                         </svg>
   
                         <p>
-                          Working with treatment planning<br> providers that barely communicate (and<br> disappear after delivery) 
+                          Working with treatment planning<br class="br-desktop"> providers<br class="br-mobile"> that barely communicate (and<br class="br-desktop"> disappear after<br class="br-mobile"> delivery) 
                         </p>
                       </div>
                     </div>
