--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                       <div class="title-text1-content1-container2">
                         <h3>Request treatment plans<br> from expert orthodontists</h3>
 
-                        <p>Work with an expert orthodontist on each case to create the results you<br> and your patients expect. Every plan is crafted with care to reduce<br> midcourse corrections and refinements.</p>
+                        <p>Work with an expert orthodontist on each case to create the<br class="br-mobile"> results you<br class="br-desktop"> and your patients expect. Every plan is crafted with care to reduce<br class="br-desktop"> midcourse corrections and refinements.</p>
                       </div>
 
                       <div class="img-text1-content1-container2">
@@ -512,7 +512,7 @@
                       <div class="title-text2-content1-container2">
                         <h3>Have case documentation<br> always at your fingertips</h3>
 
-                        <p>Your dashboard gives you instant access to each patient’s photos,<br> progress, and treatment instructions. Can’t remember what the<br> orthodontist said a year ago? It’s all right there..</p>
+                        <p>Your dashboard gives you instant access to each patient’s<br class="br-mobile"> photos,<br class="br-desktop"> progress, and treatment instructions. Can’t remember<br class="br-mobile"> what the<br class="br-desktop"> orthodontist said a year ago? It’s all right there..</p>
                       </div>
 
                       <div class="img-text2-content1-container2">
