--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                       <div class="title-text3-content1-container2">
                         <h3>Ask unlimited questions and<br> get same-day responses</h3>
 
-                        <p>Communicate directly with the orthodontist who prepared your treatment<br> plan. Provide updates. Ask follow-up questions. Get clarification. And<br> work like a true team for as long as it takes.</p>
+                        <p>Communicate directly with the orthodontist who prepared<br class="br-mobile"> your treatment<br class="br-desktop"> plan. Provide updates. Ask follow-up questions.<br class="br-mobile"> Get clarification. And<br class="br-desktop"> work like a true team for as long as it<br class="br-mobile"> takes.</p>
                       </div>
 
                       <div class="img-text3-content1-container2">
