--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                   <div class="all-content3-container2">
                     <h2 class="title-content3-container2">Our services</h2>
 
-                    <h3 class="subtitle-content3-container2">Handle any case<br>
+                    <h3 class="subtitle-content3-container2">Handle any case<br class="br-desktop">
                       <span>with total confidence</span>
                     </h3>
 
@@ -651,7 +651,7 @@
                         <h3>Free Case Evaluation</h3>
 
                         <p>
-                          Find out within 24 hours if your case<br> is a good candidate for clear aligner treatment.
+                          Find out within 24 hours if your case<br class="br-desktop"> is a good candidate for clear aligner treatment.
                         </p>
 
                         <a href="./services.html">
@@ -665,7 +665,7 @@
                         <h3>Treatment Plan Optimization</h3>
 
                         <p>
-                          Get a comprehensive plan that’s predictable,<br> efficient, and meets your treatment goals.
+                          Get a comprehensive plan that’s predictable,<br class="br-desktop"> efficient, and meets your treatment goals.
                         </p>
                         <a href="./services.html">
                         <button>Explore</button>
@@ -678,7 +678,7 @@
                         <h3>Live Zoom Consultation</h3>
 
                         <p>
-                          Discuss and review your treatment plan one on<br> one with an orthodontic expert.
+                          Discuss and review your treatment plan one on<br class="br-desktop"> one with an orthodontic expert.
                         </p>
                         <a href="./services.html">
                         <button>Explore</button>
