--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
               </div>
 
               <div class="content4-container1">
-                <h2 class="title-content4-container1"><span>Because getting predictable results</span>shouldn’t be so complicated
+                <h2 class="title-content4-container1"><span>Because getting predictable results</span><br class="br-desktop">shouldn’t be so complicated
                 </h2>
 
                 <div class="img-text-content4-container1">
@@ -705,8 +705,7 @@
                 <div class="container3-div-2">
                   <p class="container3-upload-your-case-in">Upload your case <br />in just a few clicks</p>
                   <p class="container3-p">
-                    Send us patient records, photographs, X-rays, and treatment goals through our software or the software you
-                    use.
+                    Send us patient records, photographs, X-rays,<br class="br-mobile"> and<br class="br-desktop"> treatment goals through our software or<br class="br-mobile"> the software <br class="br-desktop">you use.
                   </p>
                 </div>
               </div>
@@ -716,7 +715,7 @@
                 <div class="container3-div-2">
                   <div class="container3-receive-your">Receive your <br />treatment plan</div>
                   <p class="container3-text-wrapper-4">
-                    Our experts detail the necessary orthodontic <br />adjustments — using the aligner software of your choice.
+                    Our experts detail the necessary orthodontic <br />adjustments — using the aligner software of<br class="br-mobile" /> your choice.
                   </p>
                 </div>
               </div>
@@ -726,7 +725,7 @@
                 <div class="container3-div-2">
                   <div class="container3-count-on-ongoing">Count on <br />ongoing support</div>
                   <p class="container3-text-wrapper-4">
-                    After revisions, feedback and approval, we’ll guide you all the way through implementation for the best
+                    After revisions, feedback and approval, we’ll guide you all<br> the way through implementation for the best
                     possible outcome.
                   </p>
                 </div>
