--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                 <div class="container3-div-2">
                   <div class="container3-count-on-ongoing">Count on <br />ongoing support</div>
                   <p class="container3-text-wrapper-4">
-                    After revisions, feedback and approval, we’ll guide you all<br> the way through implementation for the best
+                    After revisions, feedback and approval, we’ll<br class="br-mobile"/> guide you all<br class="br-desktop"> the way through implementation<br class="br-mobile"/> for the best
                     possible outcome.
                   </p>
                 </div>
@@ -746,8 +746,8 @@
                   <span class="container4-content-span">We offer </span>
                   <span class="container4-content-text-wrapper-2">3 additional refinements</span>
                   <span class="container4-content-span">
-                    (more than any other company)<br> with every case. That’s because we’re so confident in the quality<br> of our
-                    treatment plans, we don’t think you’ll need them.</span
+                    (more than any<br class="br-mobile"> other company)<br class="br-desktop"> with every case. That’s because<br class="br-mobile"> we’re so confident in the quality<br class="br-desktop"> of our
+                    treatment<br class="br-mobile"> plans, we don’t think you’ll need them.</span
                   >
                 </p>
                 <img class="container4-content-pattern-icon" src="https://c.animaapp.com/7rHADiqG/img/pattern-icon.svg" />
