--- a/index.html
+++ b/index.html
@@ -765,8 +765,8 @@
             <div class="container5">
               <p class="container5-content-give-your-patients">
                 <span class="container5-content-text-wrapper">Give your patients their</span>
-                <span class="container5-content-span"><span id="container5-content-text-wrapper-span">best smiles.</span> The easy way.</span>
-                <span class="container5-content-text-wrapper">&nbsp;&nbsp; </span>
+                <span class="container5-content-span"><span id="container5-content-text-wrapper-span">best smiles.</span> <span id="container5-content-text-wrapper-span-2">The easy way.</span>
+                <span class="container5-content-text-wrapper br-desktop">&nbsp;&nbsp; </span>
               </p>
               <img class="container5-content-joel-mott" src="./media/icons/content-home/joel-mott-LaK153ghdig-unsplash 1.png" />
               <div class="container5-content-container">
