--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
               </div>
               <img class="footer-glass" src="./media/icons/content-home/glass.png">
               <img class="footer-logo-svg" src="./media/icons/content-home/logo svg 1.svg" />
-              <a href="./services.html">
+              <a class="footer-btn-a" href="./services.html">
               <button class="footer-btn"><div class="text-wrapper">Get Started Today</div></button>
               </a>
       
@@ -877,7 +877,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="footer-pages">
+                <div class="footer-pages footer-pages-2">
                   <div class="footer-link">
                     <div class="footer-link-2">
                       <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
@@ -894,7 +894,7 @@
                       </a>
                     </div>
                   </div>
-                  <div class="footer-link">
+                  <div class="footer-link br-desktop">
                     <div class="footer-link-2">
                       <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
                       <a href="./blog-single-page.html">
@@ -902,7 +902,7 @@
                       </a>
                     </div>
                   </div>
-                  <div class="footer-link">
+                  <div class="footer-link br-desktop">
                     <div class="footer-link-2">
                       <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
                       <a href="./our-blog.html">
@@ -919,7 +919,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="footer-social">
+                <div id="br-desktop1" class="footer-social">
                   <div class="footer-text-wrapper-3">Conect with us</div>
                   <span>
                     <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
@@ -931,6 +931,18 @@
                     <img class="footer-social-media" src="./media/icons/content-home/linkedin-svg.svg" />
                   </span>
                 </div>
+              </div>
+              <div class="footer-social br-mobile">
+                <div class="footer-text-wrapper-3">Conect with us</div>
+                <span>
+                  <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
+
+                  <img class="footer-social-media" src="./media/icons/content-home/ig-svg.svg" />
+
+                  <img class="footer-social-media" src="./media/icons/content-home/x-svg.svg" />
+
+                  <img class="footer-social-media" src="./media/icons/content-home/linkedin-svg.svg" />
+                </span>
               </div>
               <p class="footer-p">© AlignVision Copyright 2024 All rights reserved</p>
             </div>
