--- a/about-us.html
+++ b/about-us.html
@@ -312,7 +312,7 @@
                     </span>
                     </div>
                 </div>
-                <div class="footer-social br-mobile">
+                <div id="br-mobile" class="footer-social">
                     <div class="footer-text-wrapper-3">Conect with us</div>
                     <span>
                     <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
