--- a/case-studies.html
+++ b/case-studies.html
@@ -215,121 +215,133 @@
             <!-- Footer -->
             <footer>
                 <div class="footer-overlap">
-                    <img class="footer-fondo-bokeh-azul"
-                        src="./media/icons/content-home/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto-desenfocado 2.png" />
-                    <div class="footer-blur-circle">
-                        <div class="footer-overlap-group">
-                            <div class="footer-ellipse"></div>
-                            <div class="footer-div"></div>
+                <img
+                    class="footer-fondo-bokeh-azul"
+                    src="./media/icons/content-home/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto-desenfocado 2.png"
+                />
+                <div class="footer-blur-circle">
+                    <div class="footer-overlap-group">
+                    <div class="footer-ellipse"></div>
+                    <div class="footer-div"></div>
+                    </div>
+                </div>
+                <img class="footer-glass" src="./media/icons/content-home/glass.png">
+                <img class="footer-logo-svg" src="./media/icons/content-home/logo svg 1.svg" />
+                <a class="footer-btn-a" href="./services.html">
+                <button class="footer-btn"><div class="text-wrapper">Get Started Today</div></button>
+                </a>
+        
+                <div class="footer-links">
+                    <div class="footer-pages">
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="index.html">
+                        <div class="footer-text-wrapper-2">HOME</div>
+                        </a>
                         </div>
                     </div>
-                    <img class="footer-glass" src="./media/icons/content-home/glass.png">
-                    <img class="footer-logo-svg" src="./media/icons/content-home/logo svg 1.svg" />
-                    <a href="./services.html">
-                        <button class="footer-btn">
-                            <div class="text-wrapper">Get Started Today</div>
-                        </button>
-                    </a>
-
-                    <div class="footer-links">
-                        <div class="footer-pages">
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="index.html">
-                                        <div class="footer-text-wrapper-2">HOME</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./services.html">
-                                        <div class="footer-text-wrapper-2">SERVICES</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./about-us.html">
-                                        <div class="footer-text-wrapper-2">ABOUT US</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./case-studies.html">
-                                        <div class="footer-text-wrapper-2">CASE STUDIES</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./contact-us.html">
-                                        <div class="footer-text-wrapper-2">CONTACT US</div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="footer-pages">
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./blog-single-page.html">
-                                        <div class="footer-text-wrapper-2">RESOURCES</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./our-blog.html">
-                                        <div class="footer-text-wrapper-2">BLOG</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./blog-single-page.html">
-                                        <div class="footer-text-wrapper-2">TESTIMONIALS</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="./our-blog.html">
-                                        <div class="footer-text-wrapper-2">CAREERS</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="footer-link">
-                                <div class="footer-link-2">
-                                    <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
-                                    <a href="about-us.html">
-                                        <div class="footer-text-wrapper-2">PRIVACY POLICY</div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="footer-social">
-                            <div class="footer-text-wrapper-3">Conect with us</div>
-                            <span>
-                                <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
-
-                                <img class="footer-social-media" src="./media/icons/content-home/ig-svg.svg" />
-
-                                <img class="footer-social-media" src="./media/icons/content-home/x-svg.svg" />
-
-                                <img class="footer-social-media" src="./media/icons/content-home/linkedin-svg.svg" />
-                            </span>
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./services.html">
+                        <div class="footer-text-wrapper-2">SERVICES</div>
+                        </a>
                         </div>
                     </div>
-                    <p class="footer-p">© AlignVision Copyright 2024 All rights reserved</p>
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./about-us.html">
+                        <div class="footer-text-wrapper-2">ABOUT US</div>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./case-studies.html">
+                        <div class="footer-text-wrapper-2">CASE STUDIES</div>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./contact-us.html">
+                        <div class="footer-text-wrapper-2">CONTACT US</div>
+                        </a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="footer-pages footer-pages-2">
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./blog-single-page.html">
+                        <div class="footer-text-wrapper-2">RESOURCES</div>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./our-blog.html">
+                        <div class="footer-text-wrapper-2">BLOG</div>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="footer-link br-desktop">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./blog-single-page.html">
+                        <div class="footer-text-wrapper-2">TESTIMONIALS</div>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="footer-link br-desktop">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="./our-blog.html">
+                        <div class="footer-text-wrapper-2">CAREERS</div>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="footer-link">
+                        <div class="footer-link-2">
+                        <img class="footer-vector" src="./media/icons/content-home/Vector.svg" />
+                        <a href="about-us.html">
+                        <div class="footer-text-wrapper-2">PRIVACY POLICY</div>
+                        </a>
+                        </div>
+                    </div>
+                    </div>
+                    <div id="br-desktop1" class="footer-social">
+                    <div class="footer-text-wrapper-3">Conect with us</div>
+                    <span>
+                        <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
+
+                        <img class="footer-social-media" src="./media/icons/content-home/ig-svg.svg" />
+
+                        <img class="footer-social-media" src="./media/icons/content-home/x-svg.svg" />
+
+                        <img class="footer-social-media" src="./media/icons/content-home/linkedin-svg.svg" />
+                    </span>
+                    </div>
+                </div>
+                <div id="br-mobile" class="footer-social">
+                    <div class="footer-text-wrapper-3">Conect with us</div>
+                    <span>
+                    <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
+
+                    <img class="footer-social-media" src="./media/icons/content-home/ig-svg.svg" />
+
+                    <img class="footer-social-media" src="./media/icons/content-home/x-svg.svg" />
+
+                    <img class="footer-social-media" src="./media/icons/content-home/linkedin-svg.svg" />
+                    </span>
+                </div>
+                <p class="footer-p">© AlignVision Copyright 2024 All rights reserved</p>
                 </div>
             </footer>
             <!-- Footer End -->
