--- a/services.html
+++ b/services.html
@@ -118,8 +118,7 @@
             <div class="services-open">
                 <div class="services-div">
                     <p class="services-the-right-plan-for">
-                        <span class="services-text-wrapper">The right</span>
-                        <span class="services-text-wrapper">plan</span>
+                        <span class="services-text-wrapper">The right plan</span>
                         <span class="services-text-wrapper-3">for your needs</span>
                     </p>
                     <div class="services-comparison">
@@ -480,7 +479,7 @@
                     </span>
                     </div>
                 </div>
-                <div class="footer-social br-mobile">
+                <div id="br-mobile" class="footer-social">
                     <div class="footer-text-wrapper-3">Conect with us</div>
                     <span>
                     <img class="footer-social-media" src="./media/icons/content-home/fb-svg.svg" />
