--- a/services.html
+++ b/services.html
@@ -323,7 +323,7 @@
                             <div class="services-text-wrapper-14">-25% off</div>
                             <div class="services-text-wrapper-15">/ per case</div>
                         </div>
-                        <button class="services-btn"><div class="services-get-started-today">Contact us for more</div></button>
+                        <button id="services-btn1" class="services-btn"><div class="services-get-started-today">Contact us for more</div></button>
                         </div>
                         <div class="services-div-5">
                         <div class="services-icon-text-2">
